# ovqa

./: .gitattributes  .gitignore  README.md  check_all_models.py  example.env  imagenet_convert_bbox_data.py  imagenet_load_dataset.py  load_activitynet_vqa_dataset.py  load_activitynet_vqa_dataset_followup.py  load_coco_objects_vqa_dataset.py  load_imagenet_vqa_dataset.py  load_imagenet_vqa_dataset_followup.py  load_ovad_vqa_dataset.py  newevaluate.py  print_paths.py  pyproject.toml  requirements.txt  update_toc.py  view_results_cls.py  view_results_ovad.py  view_results_ret.py  view_results_vqa.py
.github/: workflow-env-py310-cpu.yml
.github/workflows/: build-py310-cpu.yml  build-py312-cpu.yml
assets/tables/: activitynet~val.csv  activitynet~val.html  coco~val.csv  coco~val.html  gqa~balanced_testdev.csv  gqa~balanced_testdev.html  imagenet1k-square~val.csv  imagenet1k-square~val.html  imagenet1k~val.csv  imagenet1k~val.html  retrieval~activitynet~val.csv  retrieval~activitynet~val.html  retrieval~coco~val.csv  retrieval~coco~val.html  retrieval~imagenet1k-square~val.csv  retrieval~imagenet1k-square~val.html  retrieval~imagenet1k~val.csv  retrieval~imagenet1k~val.html  vqav2~val.csv  vqav2~val.html
etc/: frozen_conda_environment.yml  frozen_pip_requirements.txt
ovqa/: __main__.py  bash_paths.py  check_model_size.py  create_prompt.py  followup.py  notebook_imports.py  optim_layer_decay.py  outputs.py  paths.py  result_loader.py  torchutils.py  utils_for_ext.py  videos_to_frames_utils.py
ovqa/annotations/: cls_templates.py
ovqa/annotations/activitynet/: activitynet_synonyms.py  activitynet_val_video_ids.json  activitynet_val_video_ids.txt  frame_paths.txt  frames.tsv  simple_activitynet_hierarchy.json
ovqa/annotations/coco/: coco_synonyms.py
ovqa/annotations/ovad/: ovad_attribute_prompts.json
ovqa/annotations/vqav2/: minival_ids.json  nominival_ids.json  smallval_annotations.json  smallval_meta.json  smallval_questions.json
ovqa/cli/: check_missing_activitynet.py  convert_videos_to_frames.py  copy_activitynet_frames.py  download_activitynet.py  extract_activitynet_frames.py
ovqa/common/: update_registry.py
ovqa/datasets/: __init__.py  activitynet.py  activitynet_hierarchy.py  activitynet_vqa_dataset.py  classifier_vqa_builder.py  classifier_vqa_dataset.py  coco_objects_vqa_dataset.py  create_vqav2_subsplit.py  imagenet.py  imagenet_hierarchy.py  interface_hierarchy.py  interface_metadata.py  load_dataset.py  meta_loading.py  ovad2000.py  ovad_synonyms.py
ovqa/examples/: simple_text_metrics.py
ovqa/metrics/: bertscore.py  bleurt.py  clip_match.py  clip_match_synonyms.py  load_metrics.py  ngram.py  preprocessing.py  result_viewer_lib.py  simple.py  syn_logits.py  torchmetrics_ext.py  vqa_loader.py
ovqa/models/: __init__.py  llava_load.py  llava_model.py  open_clip_model.py  x2vlm_model.py
ovqa/notebook_utils/: __init__.py  clip_and_logits.py  load_activitynet_for_notebook.py  load_coco_for_notebook.py  load_cocovqa_for_notebook.py  load_gqa_for_notebook.py  load_imagenet_for_notebook.py  load_ovad_for_notebook.py
ovqa/processors/: __init__.py  blip_processors.py  clip_processors.py  gpt_processors.py  llava_processors.py  openclip_processors.py  randaugment.py  text_none_processor.py  x2vlm_processors.py
ovqa/runners/: __init__.py  runner_base.py  runner_iter.py
ovqa/tasks/: __init__.py  base_task.py  classifier_vqa_followup_task.py  classifier_vqa_task.py  multilabel_classifier_vqa_task.py  multimodal_classification.py  vqa.py  vqa_task_utils.py
ovqa/textutils/: cut_sentence.py  embeddings.py
run_scripts/: activitynet.sh  coco.sh  eval_results.sh  gqa.sh  imagenet.sh  ovad.sh  retrieval_activitynet.sh  retrieval_coco.sh  retrieval_imagenet.sh  vqav2.sh
tests/ovqa/: test_imports_ovqa.py
(+315 files in other folders)
